# langsmith-standalone-agent-server

./: .gitignore  README.md  main.py  pyproject.toml
agents/calculator/: graph.py  langgraph.json  pyproject.toml
agents/weather/: .env.example  graph.py  langgraph.json  pyproject.toml
deploy/: calculator-values.yaml  deploy-agent.sh  deploy-shared-datastores.sh  shared-datastores.yaml  weather-values.yaml
docs/: deployment-guide.md  interacting-with-agents.md  portable-deployment-guide.md
scripts/: invoke-agent.sh
