[project]
name = "calculator-agent"
version = "0.1.0"
description = "Standalone Agent Server demo — calculator agent (Claude + calculate tool)"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=0.3,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["graph"]
